src/test/ui/type-alias-impl-trait/static-const-types.stderr
error[E0308]: mismatched types
  --> $DIR/static-const-types.rs:10:20
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
LL | 
LL | static FOO1: Foo = 22_u32;
   |                    ^^^^^^ expected opaque type, found `u32`
   |
   = note: expected opaque type `impl Debug`
                     found type `u32`

error[E0308]: mismatched types
  --> $DIR/static-const-types.rs:11:19
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL | const FOO2: Foo = 22_u32;
   |                   ^^^^^^ expected opaque type, found `u32`
   |
   = note: expected opaque type `impl Debug`
                     found type `u32`

error: could not find defining uses
  --> $DIR/static-const-types.rs:8:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
